--- a/NetBeans/CacaPalavrasSwing/nbproject/private/private.properties
+++ b/NetBeans/CacaPalavrasSwing/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/paulo/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\Dougl\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
